fix: fix alignment

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -4,6 +4,10 @@
 @import "../../styles/reset.scss";
 
 .login-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: #f5f5f5;
   padding: 10px;
   height: 100vh;
@@ -23,6 +27,7 @@
 
     @include breakpoint-up(large) {
       display: flex;
+      align-self: self-start;
       max-width: 173.76px;
       width: 100%;
       height: 36px;
@@ -33,6 +38,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
   }
 
   &__art {
